# PhysicalEngine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  clean.bat  clean.sh  imgui.ini
.github/: labeler.yml  release.yaml
PhysicalEngine/: CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  Mesh.cpp  Mesh.h  PhysicalEngine.cpp  PhysicalEngine.h  PhysicalEngineLauncher.cpp  PhysicalEngineLauncher.h  Scene.cpp  Scene.h  main.cpp
PhysicalEngine/Contact/: ParticlesContactGeneratorRegistry.cpp  ParticlesContactGeneratorRegistry.h
PhysicalEngine/Contact/ContactGenerator/: ParticleCollide.h
PhysicalEngine/Drawing/: Drawing.cpp  Drawing.h  Shape.cpp  Shape.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
PhysicalEngine/Force/: AnchoredSpring.cpp  AnchoredSpring.h  Buoyancy.cpp  Buoyancy.h  Drag.cpp  Drag.h  ForceGenerator.h  Gravity.cpp  Gravity.h  Spring.cpp  Spring.h
PhysicalEngine/Forme3D/Cube/: Cube.h
PhysicalEngine/Forme3D/Sphere/: Sphere.h
PhysicalEngine/Forme3D/Triangle3D/: Trangle3D.h
PhysicalEngine/Integrable/: Integrable.h
PhysicalEngine/Integrator/: Integrator.cpp  Integrator.h
PhysicalEngine/Mesh/: Mesh.cpp  Mesh.h
PhysicalEngine/Mesh/Cuboid/: Cube.cpp  Cube.h  CuboidRectangle.cpp  CuboidRectangle.h
PhysicalEngine/Mesh/Sphere/: Sphere.cpp  Sphere.h
PhysicalEngine/Octree/: Octree.cpp  Octree.h
PhysicalEngine/ParticleContact/: ParticleContact.h  ParticleContactResolver.h  ParticlesContactGeneratorRegistry.cpp
PhysicalEngine/ParticleContact/ContactGenerator/: ParticleCollide.cpp  ParticleCollide.h
PhysicalEngine/ParticleContact/ContactGenerator/ParticleLink/: ParticleLink.h  ParticleRode.h
PhysicalEngine/ParticleContact/ParticleCollider/: ParticleCollider.cpp  ParticleCollider.h
PhysicalEngine/Particule/: Particule.cpp  Particule.h
PhysicalEngine/RigidbodyContact/: RigidbodyContact.cpp  RigidbodyContact.h  RigidbodyContactGeneratorRegistry.cpp  RigidbodyContactGeneratorRegistry.h
PhysicalEngine/RigidbodyContact/RigidbodyCollider/: RigidbodyCollider.cpp  RigidbodyCollider.h
PhysicalEngine/RigidbodyContact/RigidbodyContact/: RigidbodyContact.cpp  RigidbodyContact.h
PhysicalEngine/RigidbodyContact/RigidbodyContact/RigidbodyCuboidCuboidContact/: RigidbodyCuboidCuboidContact.cpp  RigidbodyCuboidCuboidContact.h
PhysicalEngine/RigidbodyContact/RigidbodyContact/RigidbodyCuboidPlaneContact/: RigidbodyCuboidPlaneContact.cpp  RigidbodyCuboidPlaneContact.h
PhysicalEngine/RigidbodyContact/RigidbodyContact/RigidbodyCuboidSphereContact/: RigidbodyCuboidSphereContact.cpp  RigidbodyCuboidSphereContact.h
PhysicalEngine/RigidbodyContact/RigidbodyContact/RigidbodySphereContact/: RigidbodySphereContact.cpp  RigidbodySphereContact.h
PhysicalEngine/RigidbodyContact/RigidbodyContact/RigidbodySpherePlaneContact/: RigidbodySpherePlaneContact.cpp  RigidbodySpherePlaneContact.h
PhysicalEngine/RigidbodyContact/RigidbodyContact/RigidbodySphereSphereContact/: RigidbodySphereSphereContact.cpp  RigidbodySphereSphereContact.h
PhysicalEngine/Scene/: Axis.cpp  Axis.h  Camera.cpp  Camera.h  ForceHandler.cpp  ForceHandler.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  Integrator.cpp  Integrator.h  PhysicHandler.cpp  PhysicHandler.h  Scene.cpp  Scene.h
PhysicalEngine/Scene/Components/: Component.cpp  Component.h  DefaultComponent.h  components-here.txt
PhysicalEngine/Scene/Components/Collider/: Collider.cpp  Collider.h
PhysicalEngine/Scene/Components/Collider/ParticleCollider/: ParticleCollider.cpp  ParticleCollider.h
PhysicalEngine/Scene/Components/Collider/RigidbodyCollider/: RigidbodyPrimitiveCollider.cpp  RigidbodyPrimitiveCollider.h
PhysicalEngine/Scene/Components/Collider/RigidbodyCollider/RigidbodyCuboidRectangleCollider/: RigidbodyCuboidRectangleCollider.cpp  RigidbodyCuboidRectangleCollider.h
PhysicalEngine/Scene/Components/Mesh/: Mesh.cpp  Mesh.h
PhysicalEngine/Scene/Components/Mesh/Cuboid/: Cube.cpp  Cube.h  CuboidRectangle.cpp  CuboidRectangle.h  MyCube.cpp  MyCube.h  MyCubeUseIndice.cpp  MyCubeUseIndice.h
PhysicalEngine/Scene/Components/Mesh/Cylinder/: Cylinder.cpp  Cylinder.h
PhysicalEngine/Scene/Components/Mesh/Sphere/: Sphere.cpp  Sphere.h
PhysicalEngine/Scene/Components/Particule/: Particule.cpp  Particule.h
PhysicalEngine/Scene/Components/Particule/Integrable/: Integrable.h
PhysicalEngine/Scene/Components/Particule/Integrator/: Integrator.cpp  Integrator.h
PhysicalEngine/Scene/Components/Particule/Particule/: Particule.h
PhysicalEngine/Scene/Components/PhysicalComponent/: PhysicalComponent.cpp  PhysicalComponent.h
PhysicalEngine/Scene/Components/PhysicalComponent/Particle/: Particle.cpp  Particle.h
PhysicalEngine/Scene/Components/PhysicalComponent/Rigidbody/: Rigidbody.cpp  Rigidbody.h
PhysicalEngine/Scene/Components/Rigidbody/: Rigidbody.cpp  Rigidbody.h
PhysicalEngine/Scene/Components/Transform/: Transform.cpp  Transform.h
PhysicalEngine/Scene/Mesh/: Mesh.cpp  Mesh.h
PhysicalEngine/Scene/Mesh/Cuboid/: Cube.h  CuboidRectangle.cpp  MyCube.cpp  MyCube.h  MyCubeUseIndice.cpp
PhysicalEngine/Scene/Mesh/Sphere/: Sphere.cpp
PhysicalEngine/Scene/Prefabs/: ParticlePrefab.cpp  PlanePrefab.cpp  PlanePrefab.h  RigidbodyPrefab.cpp
PhysicalEngine/Scene/Shader/: Shader.cpp  Shader.h
PhysicalEngine/Shader/: Shader.cpp  Shader.h
PhysicalEngine/Utility/: Matrix33.h  Matrix34.cpp  Matrix44.h  RollingBuffer.h  Vector3d.h  imGuiUtility.cpp  imGuiUtility.h
PhysicalEngine/Vector3D/: Vector3d.cpp  vector3d.cpp  vector3d.h
PhysicalEngine/Vector3d/: Vector3d.cpp  Vector3d.h
PhysicalEngine/glad/src/: glad.c
PhysicalEngine/imgui/: ImGuiFileBrowser.cpp
test/: CMakeLists.txt  integratorTest.cpp  mainTest.cpp  mainTest2.cpp  matrix33Test.cpp  matrix34Test.cpp  matrixTest.cpp  particleTest.cpp  particuleTest.cpp  physicHandlerTest.cpp  quaternionTest.cpp  vector3dTest.cpp
test/TestParticule/: TestParticule.cpp  TestParticule.h
(+166 files in other folders)
